# ai-study-companion

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
data/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  workspace.yaml
data/.cursor/rules/: dagster.md
data/.tmp_dagster_home_50r1ua9e/history/: runs.db
data/.tmp_dagster_home_50r1ua9e/history/runs/: .db  235bd8e3-08a7-4fdc-bb02-cef0d4da2184.db  7247f847-5395-4d88-bf2f-7a63e99263b2.db  74e0815c-1d8f-47cb-973b-3cd7057742a7.db  b9638a78-0a27-4b2e-84be-d11b85d450bc.db  ef377104-7bca-4436-b988-5b175a24e9e2.db  f6afeec7-a780-4401-9c1c-646fd8e270eb.db  index.db
data/.tmp_dagster_home_50r1ua9e/schedules/: schedules.db
data/.tmp_dagster_home_50r1ua9e/storage/235bd8e3-08a7-4fdc-bb02-cef0d4da2184/compute_logs/: ebuanxhe.err  farykoyt.err  iykluebc.err  jmvzpwnx.err  lxceynfd.err  rupuqmyz.err  ttgaftdr.err  wkcehwgq.err
data/.tmp_dagster_home_50r1ua9e/storage/7247f847-5395-4d88-bf2f-7a63e99263b2/compute_logs/: aisvvsnt.err  bqnudoax.err  cokiuzzn.err  elnrjmmz.err  erlansuf.err  vccabhws.err  xadjupgx.err  xmcgnank.err
data/.tmp_dagster_home_50r1ua9e/storage/74e0815c-1d8f-47cb-973b-3cd7057742a7/compute_logs/: coqgyrcx.err  dqvgnnun.err  gsbvblxu.err  iflqbyub.err  mcdvqagf.err  mxidtlit.err  nzyrzrlq.err  vgubdmuk.err
data/.tmp_dagster_home_50r1ua9e/storage/b9638a78-0a27-4b2e-84be-d11b85d450bc/compute_logs/: cmvlqnyo.err  cnskeqpo.err  (+6 more)
data/src/study_companion/: definitions.py
data/src/study_companion/defs/: __init__.py  asset_checks.py  assets.py  resources.py
(+114 files in other folders)
